correct NAMESPACE directives
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MassArray@51088 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,9 +19,9 @@ exportClasses(
 	MassArrayData
 )
 
-S3Method(plot, MassArrayData)
+S3method(plot, MassArrayData)
 
-S3Method(sum, MassArraySpectrum)
+S3method(sum, MassArraySpectrum)
 
 export(
 	ampliconPrediction,
