bug fix for new EpiTyper file formatting
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/MassArray@81263 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ importFrom(methods, new, slot, validObject)
 
 importFrom(stats, as.ts, coef, dendrapply, deviance, end, formula,
           frequency, IQR, is.leaf, knots, mad, median, naprint, pf,
-          pnorm, print.anova, printCoefmat, pt, quantile, reformulate,
+          pnorm, printCoefmat, pt, quantile, reformulate,
           residuals, start, symnum, terms, time, ts, tsp, wilcox.test,
           write.ftable)
 
