--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: MassArray
 Type: Package
 Title: Analytical Tools for MassArray Data
 Version: 1.35.1
-Date: 2009-05-19
-Author: Reid F. Thompson <rthompso@aecom.yu.edu>, John M. Greally <jgreally@aecom.yu.edu>
-Maintainer: Reid F. Thompson <rthompso@aecom.yu.edu>
+Date: 2019-03-18
+Author: Reid F. Thompson <reid.thompson@gmail.com>, John M. Greally <john.greally@einstein.yu.edu>
+Maintainer: Reid F. Thompson <reid.thompson@gmail.com>
 Imports: graphics, grDevices, stats, utils
 Depends: R (>= 2.10.0), methods
 Description: This package is designed for the import, quality control, analysis, and visualization of methylation data generated using Sequenom's MassArray platform.  The tools herein contain a highly detailed amplicon prediction for optimal assay design.  Also included are quality control measures of data, such as primer dimer and bisulfite conversion efficiency estimation.  Methylation data are calculated using the same algorithms contained in the EpiTyper software package.  Additionally, automatic SNP-detection can be used to flag potentially confounded data from specific CG sites.  Visualization includes barplots of methylation data as well as UCSC Genome Browser-compatible BED tracks.  Multiple assays can be positionally combined for integrated analysis.
